# SequenceLab

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sequencelab/: build.py  config.py
src/sequencelab/layers/: fem.py  wave.py  zeros.py
tests/: test_fem.py  test_wave.py  test_zeros.py
